--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ rvm:
 before_script:
   - gem install awesome_bot
 script:
-  - awesome_bot README.md --allow-dupe --white-list facebook.com,linkedin.com,quora.com,travis-ci.org,reddit.com
+  - awesome_bot README.md --allow-dupe --white-list facebook.com,linkedin.com,quora.com,travis-ci.org,reddit.com,img.shields.io
